--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.onedaybeard.artemis</groupId>
 	<artifactId>artemis-parent</artifactId>
-	<version>2.5.0-SNAPSHOT</version>
+	<version>2.4.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>artemis parent</name>
 	<description>Fork of Artemis Entity System Framework.</description>
@@ -39,6 +39,10 @@
 			<comments>libGDX TimSort and GWT reflection</comments>
 		</license>
 	</licenses>
+
+	<dependencyManagement>
+
+	</dependencyManagement>
 
 	<issueManagement>
 		<url>https://github.com/junkdog/artemis-odb/issues</url>
