--- a/artemis-backend-gwt/artemis-gwt/pom.xml
+++ b/artemis-backend-gwt/artemis-gwt/pom.xml
@@ -29,7 +29,7 @@
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-dev</artifactId>
 			<version>${gwt.version}</version>
-			<scope>provided</scope>
+<!--			<scope>provided</scope>-->
 		</dependency>
 
 	</dependencies>
